style: fix page overflow. Make navbar hidden on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,7 +77,7 @@ html[data-theme="dark"] {
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100dvh;
   background:
     linear-gradient(180deg, transparent 0%, var(--background-subtle) 100%),
     var(--background);
